Fixing overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ body {
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
   color: #141413 !important;
-  overflow-x: hidden;
 };
 
 @layer base {
